sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:9: error: value -- is not a member of Int
		for(i<-getNombreValeurs()--j to 1 ){
                                         ^